<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movieDetailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/movieDetailBackdrop"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/Header_2"
            android:textStyle="bold"
            tools:text="Movie Detail Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailBackdrop"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/Header_4"
            tools:text="Movie Release Date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailDurationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/Header_5"
            android:text="@string/movie_detail_duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailReleaseDate"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/Body_2"
            tools:text="120 minutes"
            app:layout_constraintStart_toEndOf="@id/barrier1"
            app:layout_constraintTop_toBottomOf="@id/movieDetailReleaseDate"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailRatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_detail_rating"
            android:textAppearance="@style/Header_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailDurationTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailRatingValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/Body_2"
            tools:text="8,7"
            app:layout_constraintStart_toEndOf="@id/barrier1"
            app:layout_constraintTop_toBottomOf="@id/movieDetailDurationTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailVoteCountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_detail_vote_count"
            android:textAppearance="@style/Header_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailRatingTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailVoteCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/Body_2"
            tools:text="872"
            app:layout_constraintStart_toEndOf="@id/barrier1"
            app:layout_constraintTop_toBottomOf="@id/movieDetailRatingTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="movieDetailDurationTitle, movieDetailRatingTitle, movieDetailVoteCountTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailSynopsisTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/movie_detail_vote_synopsis"
            android:textAppearance="@style/Header_4"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailVoteCount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieDetailSynopsisText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/Body_2"
            tools:text="Movie OverView 1 \nMovie Overview 2 \nMovie Overview 3 \nMovie Overview 4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movieDetailSynopsisTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/movieDetailProgressBar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:visibility="gone"
        android:theme="?android:progressBarStyleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/movieDetailRefreshButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone"
        tools:visibility="visible"
        app:srcCompat="@drawable/ic_refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/movieDetailErrorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_result_text"
        android:visibility="gone"
        style="@style/Header_2"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieDetailRefreshButton"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>